--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (15.1) UNRELEASED; urgency=medium
+
+  * added Japanese and Catalan to .desktop
+
+ -- Adrian <adrian@mxlinux.org>  Tue, 27 Jan 2015 11:14:11 -0500
+
 mx-bootrepair (14.3+1) mx; urgency=low
 
   * retranslated stings, ready for point release
