--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (15.3mx14) mx; urgency=medium
+
+  * changed help URL
+
+ -- Adrian <adrian@mxlinux.org>  Fri, 20 Mar 2015 16:48:47 -0400
+
 mx-bootrepair (15.2) mx; urgency=medium
 
   * added new help URL
