--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (15.4mx14) mx; urgency=medium
+
+  * added Polish translation
+
+ -- Adrian <adrian@mxlinux.org>  Mon, 20 Apr 2015 19:55:41 -0400
+
 mx-bootrepair (15.3mx14) mx; urgency=medium
 
   * changed help URL
