--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (15.7.1mx15) mx; urgency=medium
+
+  * new URL for documentation
+
+ -- Adrian <adrian@mxlinux.org>  Thu, 09 Jul 2015 17:38:38 -0400
+
 mx-bootrepair (15.7mx15) mx; urgency=medium
 
   * changed to qt5
