--- a/debian/install
+++ b/debian/install
@@ -3,3 +3,4 @@ mx-bootrepair.desktop	         usr/share/applications/mx
 translations/*.qm 	 usr/share/mx-bootrepair/locale
 mx-bootrepair.png	usr/share/pixmaps/mx
 icons/*                 usr/share/mx-bootrepair/icons
+license.html		usr/share/doc/mx-bootrepair
