--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (15.10mx15) mx; urgency=medium
+
+  * new translations
+
+ -- Adrian <adrian@mxlinux.org>  Fri, 23 Oct 2015 15:58:37 -0400
+
 mx-bootrepair (15.7.1mx15) mx; urgency=medium
 
   * new URL for documentation
