new build translations, move app icon location

--- a/debian/install
+++ b/debian/install
@@ -2,5 +2,6 @@ mx-bootrepair 		 usr/sbin
 mx-bootrepair.desktop	         usr/share/applications/mx
 translations/*.qm 	 usr/share/mx-bootrepair/locale
 mx-bootrepair.png	usr/share/pixmaps/mx
+mx-bootrepair.png	usr/share/pixmaps
 icons/*                 usr/share/mx-bootrepair/icons
 license.html		usr/share/doc/mx-bootrepair
