--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (15.11mx15) mx; urgency=medium
+
+  * new translations
+
+ -- Adrian <adrian@mxlinux.org>  Mon, 30 Nov 2015 09:28:23 -0500
+
 mx-bootrepair (15.10mx15) mx; urgency=medium
 
   * new translations
