build with new translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (17.3mx16) mx; urgency=medium
+
+  * new translations
+
+ -- Adrian <adrian@mxlinux.org>  Thu, 30 Mar 2017 09:41:39 -0400
+
 mx-bootrepair (16.11mx16+1) mx; urgency=medium
 
   * FR translations
