--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,5 @@
 mx-bootrepair 		 usr/sbin
-mx-bootrepair.desktop	         usr/share/applications/mx
+mx-bootrepair.desktop	         usr/share/applications
 translations/*.qm 	 usr/share/mx-bootrepair/locale
 mx-bootrepair.png	usr/share/pixmaps
 icons/*                 usr/share/mx-bootrepair/icons
