--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (17.6mx16) mx; urgency=medium
+
+  * updated translations
+
+ -- Adrian <adrian@mxlinux.org>  Fri, 02 Jun 2017 13:04:15 -0400
+
 mx-bootrepair (17.5mx16) mx; urgency=medium
 
   * button icons follow theme choice
