--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (17.8+2) mx; urgency=medium
+
+  * new translations
+
+ -- Adrian <adrian@mxlinux.org>  Wed, 23 Aug 2017 08:34:28 -0400
+
 mx-bootrepair (17.8+1) mx; urgency=medium
 
   * new translations
