--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (17.10) mx; urgency=medium
+
+  * new icon
+
+ -- Adrian <adrian@mxlinux.org>  Sun, 15 Oct 2017 12:28:35 -0400
+
 mx-bootrepair (17.8+2) mx; urgency=medium
 
   * new translations
