--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (17.11+1) mx; urgency=medium
+
+  * fix FR detection
+
+ -- Adrian <adrian@mxlinux.org>  Sat, 11 Nov 2017 18:27:12 -0500
+
 mx-bootrepair (17.11) mx; urgency=medium
 
   * add FR help link
