--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (17.11+2) mx; urgency=medium
+
+  * display Help and GUI at the same time
+
+ -- Adrian <adrian@mxlinux.org>  Thu, 30 Nov 2017 13:19:49 -0500
+
 mx-bootrepair (17.11+1) mx; urgency=medium
 
   * fix FR detection
