--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mx-bootrepair (17.12+1) mx; urgency=medium
+
+  * Spanish translation update
+  * Fix Franch help link
+
+ -- Adrian <adrian@mxlinux.org>  Mon, 11 Dec 2017 22:29:38 -0500
+
 mx-bootrepair (17.12) mx; urgency=medium
 
   * new translations
