--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (18.1) mx; urgency=medium
+
+  * new translations
+
+ -- Adrian <adrian@mxlinux.org>  Sat, 10 Feb 2018 01:33:57 -0500
+
 mx-bootrepair (17.12+1) mx; urgency=medium
 
   * Spanish translation update
