start mx-viwer as regular user

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (18.3) mx; urgency=medium
+
+  * new translations
+
+ -- Adrian <adrian@mxlinux.org>  Fri, 02 Mar 2018 09:16:48 -0500
+
 mx-bootrepair (18.1) mx; urgency=medium
 
   * new translations
