--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mx-bootrepair (18.6.1) mx; urgency=medium
+
+  * add changelog button
+  * fix displaying program version for non-EN locale
+
+ -- Adrian <adrian@mxlinux.org>  Sat, 23 Jun 2018 17:32:03 -0400
+
 mx-bootrepair (18.6) mx; urgency=medium
 
   * new translations
