--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (18.6.2) mx; urgency=medium
+
+  * fix bug: message box in wrong place
+
+ -- Adrian <adrian@mxlinux.org>  Thu, 28 Jun 2018 18:00:13 -0400
+
 mx-bootrepair (18.6.1) mx; urgency=medium
 
   * add changelog button
