--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (18.8) mx; urgency=medium
+
+  * it should handly now nvme and mmcblk devices
+
+ -- Adrian <adrian@mxlinux.org>  Wed, 01 Aug 2018 15:27:02 -0400
+
 mx-bootrepair (18.6.2) mx; urgency=medium
 
   * fix bug: message box in wrong place
