--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,6 @@
-mx-bootrepair 		 usr/sbin
+mx-bootrepair		 usr/sbin
 mx-bootrepair.desktop    usr/share/applications
-translations/*.qm 	 usr/share/mx-bootrepair/locale
+translations/*.qm	 usr/share/mx-bootrepair/locale
 mx-bootrepair.png	 usr/share/pixmaps
+mx-bootrepair.png	 usr/share/icons/hicolor/32x32/apps
 license.html		 usr/share/doc/mx-bootrepair
