--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (18.10) mx; urgency=medium
+
+  * updated translations
+
+ -- Adrian <adrian@mxlinux.org>  Sun, 14 Oct 2018 18:25:57 -0400
+
 mx-bootrepair (18.8.1) mx; urgency=medium
 
   * fix icons for other themes
