--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (18.12) mx; urgency=medium
+
+  * update translations
+
+ -- Adrian <adrian@mxlinux.org>  Fri, 28 Dec 2018 11:34:18 -0500
+
 mx-bootrepair (18.11) mx; urgency=medium
 
   * updated translations
