--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (19.2) mx; urgency=medium
+
+  * updated translations
+
+ -- Adrian <adrian@mxlinux.org>  Sun, 17 Feb 2019 22:27:20 -0500
+
 mx-bootrepair (19.1) mx; urgency=medium
 
   * fix nvme partition selection
