--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (19.7.1) mx; urgency=medium
+
+  * update icon
+
+ -- Adrian <adrian@mxlinux.org>  Mon, 08 Jul 2019 11:12:09 -0400
+
 mx-bootrepair (19.7) mx; urgency=medium
 
   * fix window buttons for Buster
