--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,5 @@
 license.html		 usr/share/doc/mx-bootrepair
 mx-bootrepair		 usr/sbin
 mx-bootrepair.desktop    usr/share/applications
-mx-bootrepair.png	 usr/share/icons/hicolor/256x256/apps
+icons/mx-bootrepair.png	 usr/share/icons/hicolor/256x256/apps
 translations/*.qm	 usr/share/mx-bootrepair/locale
