added offline help file

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (19.8) mx; urgency=medium
+
+  * added offline help file
+
+ -- Adrian <adrian@mxlinux.org>  Wed, 21 Aug 2019 13:31:04 -0400
+
 mx-bootrepair (19.7.1) mx; urgency=medium
 
   * update icon
