--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (19.9) mx; urgency=medium
+
+  * new translations
+
+ -- Adrian <adrian@mxlinux.org>  Sun, 01 Sep 2019 00:47:42 -0400
+
 mx-bootrepair (19.8) mx; urgency=medium
 
   * added offline help file
