new build with translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (19.9.01) mx; urgency=medium
+
+  * new translations
+
+ -- Adrian <adrian@mxlinux.org>  Fri, 27 Sep 2019 15:13:30 -0400
+
 mx-bootrepair (19.9) mx; urgency=medium
 
   * new translations
