--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (19.10.03) mx; urgency=medium
+
+  * fix localization
+
+ -- Adrian <adrian@mxlinux.org>  Mon, 28 Oct 2019 17:34:29 -0400
+
 mx-bootrepair (19.10.02) mx; urgency=medium
 
   * mount /boot/efi if on different partition when reparing grub.cfg
