--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (19.10.04) mx; urgency=medium
+
+  * fix help link
+
+ -- Adrian <adrian@mxlinux.org>  Tue, 29 Oct 2019 14:11:11 -0400
+
 mx-bootrepair (19.10.03) mx; urgency=medium
 
   * fix localization
