--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (19.10.05) mx; urgency=medium
+
+  * translation update
+
+ -- Adrian <adrian@mxlinux.org>  Thu, 31 Oct 2019 00:34:47 -0400
+
 mx-bootrepair (19.10.04) mx; urgency=medium
 
   * fix help link
