--- a/debian/changelog
+++ b/debian/changelog
@@ -355,4 +355,4 @@ mx-bootrepair (0.1mx140+1) mx; urgency=low
 
   * Initial release. 
 
- -- Steven Pusser (Stevo) <maintainer@mepiscommunity.org>  Fri, 04 Apr 2014 21:40:04 -0700
+ -- Steven Pusser [stevep@mxlinux.org]  Fri, 04 Apr 2014 21:40:04 -0700
