--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,5 @@
 help/*				usr/share/doc/mx-boot-repair
-mx-boot-repair			usr/sbin
+mx-boot-repair			usr/bin
 mx-boot-repair.desktop		usr/share/applications
 icons/mx-boot-repair.png	usr/share/icons/hicolor/256x256/apps
 translations/*.qm		usr/share/mx-boot-repair/locale
