--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (21.3) mx; urgency=medium
+
+  * mount efivars before installing GRUB
+
+ -- Adrian <adrian@mxlinux.org>  Mon, 15 Mar 2021 09:42:16 -0400
+
 mx-bootrepair (19.10.05) mx; urgency=medium
 
   * translation update
