--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (21.3.03) mx; urgency=medium
+
+  * adjust /dev/udev in chroot to make update-grub work
+
+ -- fehlix <fehlix@mxlinux.org>  Sat, 20 Mar 2021 18:17:45 -0400
+
 mx-bootrepair (21.3.02) mx; urgency=medium
 
   * fix: NVRAM access of grub-install within chroot
