--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (22.02.01) mx; urgency=medium
+
+  * adjust mount/umount for chroot
+
+ -- fehlix <fehlix@mxlinux.org>  Mon, 14 Feb 2022 18:21:40 -0400
+
 mx-bootrepair (21.3.03) mx; urgency=medium
 
   * adjust /dev/udev in chroot to make update-grub work
