--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (22.76.01) mx; urgency=medium
+
+  * Fix: add alternative for LUKS detection
+
+ -- Adrian <adrian@mxlinux.org>  Wed, 15 Jun 2022 22:28:55 -0400
+
 mx-bootrepair (22.6) mx; urgency=medium
 
   * Preserve user theme when launching program as root
