--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (22.76.03) mx; urgency=medium
+
+  * translation refresh
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Sat, 23 Jul 2022 11:15:56 -0400
+
 mx-bootrepair (22.76.02) mx; urgency=medium
 
   * Remove not needed --qtenv annotation pkexec policy
