--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (22.81) mx; urgency=medium
+
+  * Fix: launching documents from Help (fixes a problem in Plasma) 
+
+ -- Adrian <adrian@mxlinux.org>  Mon, 22 Aug 2022 19:13:01 -0400
+
 mx-bootrepair (22.80) mx; urgency=medium
 
   * Fix: launching Firefox from Help
