--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (22.82) mx; urgency=medium
+
+  * update translations 
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Wed, 26 Oct 2022 19:57:13 -0400
+
 mx-bootrepair (22.81) mx; urgency=medium
 
   * Fix: launching documents from Help (fixes a problem in Plasma) 
