--- a/translations-desktop-file/po/mx-bootrepair-desktop_oc.po
+++ b/translations-desktop-file/po/mx-bootrepair-desktop_oc.po
@@ -3,10 +3,6 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
-# Translators:
-# Dolphin Oracle <dolphinoracle@gmail.com>, 2022
-# aer, 2023
-# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -14,20 +10,19 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-12-08 22:04-0500\n"
 "PO-Revision-Date: 2022-12-09 03:06+0000\n"
-"Last-Translator: aer, 2023\n"
-"Language-Team: German (https://app.transifex.com/anticapitalista/teams/10162/de/)\n"
+"Language-Team: Occitan (post 1500) (https://app.transifex.com/anticapitalista/teams/10162/oc/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: oc\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. The desktop entry name will be displayed within the menu.
 #: desktop-in/mx-boot-repair.desktop.in:4
 msgid "MX Boot Repair"
-msgstr "MX-Boot-Reparatur"
+msgstr ""
 
 #. # The desktop entry comment will be shown within the menu.
 #: desktop-in/mx-boot-repair.desktop.in:6
 msgid "Simple Boot Repair"
-msgstr "Einfache Boot-Reparatur"
+msgstr ""
