Clean up some QStringLiteral spam

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (24.4) mx; urgency=medium
+
+  * Update translations
+
+ -- Adrian <adrian@mxlinux.org>  Sat, 20 Apr 2024 10:38:42 -0400
+
 mx-bootrepair (24.3) mx; urgency=medium
 
   * Update translations
