--- a/translations-desktop-file/po/mx-bootrepair-desktop_gl.po
+++ b/translations-desktop-file/po/mx-bootrepair-desktop_gl.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Robin, 2023
+# Paulo C., 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-12-08 22:04-0500\n"
 "PO-Revision-Date: 2022-12-09 03:06+0000\n"
-"Last-Translator: Robin, 2023\n"
+"Last-Translator: Paulo C., 2024\n"
 "Language-Team: Galician (https://app.transifex.com/anticapitalista/teams/10162/gl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +25,7 @@ msgstr ""
 #. The desktop entry name will be displayed within the menu.
 #: desktop-in/mx-boot-repair.desktop.in:4
 msgid "MX Boot Repair"
-msgstr ""
+msgstr "MX Reparador do arranque"
 
 #. # The desktop entry comment will be shown within the menu.
 #: desktop-in/mx-boot-repair.desktop.in:6
