--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (25.09.2) mx; urgency=medium
+
+  * Update translations
+
+ -- Adrian <adrian@mxlinux.org>  Tue, 09 Sep 2025 12:56:48 -0400
+
 mx-bootrepair (25.09.01) mx; urgency=medium
 
   * Added a -c/--cli option to run the app in the CLI, detect if running
