--- a/translations-desktop-file/po/mx-bootrepair-desktop_sl.po
+++ b/translations-desktop-file/po/mx-bootrepair-desktop_sl.po
@@ -5,7 +5,7 @@
 # 
 # Translators:
 # Dolphin Oracle <dolphinoracle@gmail.com>, 2022
-# Arnold Marko <arnold.marko@gmail.com>, 2024
+# Arnold Marko <arnold.marko@gmail.com>, 2025
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-12-08 22:04-0500\n"
 "PO-Revision-Date: 2022-12-09 03:06+0000\n"
-"Last-Translator: Arnold Marko <arnold.marko@gmail.com>, 2024\n"
+"Last-Translator: Arnold Marko <arnold.marko@gmail.com>, 2025\n"
 "Language-Team: Slovenian (https://app.transifex.com/anticapitalista/teams/10162/sl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +25,7 @@ msgstr ""
 #. The desktop entry name will be displayed within the menu.
 #: desktop-in/mx-boot-repair.desktop.in:4
 msgid "MX Boot Repair"
-msgstr "MX popravljanje zagona"
+msgstr "MX popravilo zagona"
 
 #. # The desktop entry comment will be shown within the menu.
 #: desktop-in/mx-boot-repair.desktop.in:6
