--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-bootrepair (25.09.4) mx; urgency=medium
+
+  * Avoid asking for elevation when exiting CLI
+
+ -- Adrian <adrian@mxlinux.org>  Fri, 12 Sep 2025 23:26:28 -0400
+
 mx-bootrepair (25.09.3) mx; urgency=medium
 
   * Update translations
